--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.jpa.show-sql = true
 spring.jpa.open-in-view = true
 
 # mysql
-spring.datasource.url=jdbc:mysql://localhost/alunos
-spring.datasource.username=root
-spring.datasource.password=gpn
+#spring.datasource.url=jdbc:mysql://localhost/alunos
+#spring.datasource.username=root
+#spring.datasource.password=gpn
